fix---z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ body {
   transition-property: opacity, visibility;
   transition-duration: 2000ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
 }
 .backdrop.is-hidden {
   opacity: 0;
